--- a/playbooks/roles/add-letsencrypt-certificate/vars/main.yml
+++ b/playbooks/roles/add-letsencrypt-certificate/vars/main.yml
@@ -16,5 +16,7 @@ EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX: 'maintenance.html'
 EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX_STATIC: 'maintenance_index_files'
 
 LETSENCRYPT_ADDITIONAL_DOMAIN: []
+LETSENCRYPT_DOMAIN_STING: []
+LETSENCRYPT_ALL_DOMAIN: ''
 
 dhparamfile_dir: '/etc/nginx/ssl'
