--- a/playbooks/roles/mongo/defaults/main.yml
+++ b/playbooks/roles/mongo/defaults/main.yml
@@ -31,7 +31,7 @@ MONGO_USERS:
 
 MONGO_CLUSTERED: !!null
 MONGO_BIND_IP: 127.0.0.1
-
+MONGO_MULTITENANT: false
 ##
 
 mongo_logpath: "{{ mongo_log_dir }}/mongodb.log"
