Add scout lending page as a MAINTENANCE work

--- a/playbooks/roles/add-letsencrypt-certificate/vars/main.yml
+++ b/playbooks/roles/add-letsencrypt-certificate/vars/main.yml
@@ -14,6 +14,8 @@ EDXAPP_NGINX_BACKUP_MAINTENANCE_PATH: '/edx/var/nginx/server-static/maintenance'
 EDXAPP_NGINX_BACKUP_MAINTENANCE_FILE: 'maintenance'
 EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX: 'maintenance.html'
 EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX_STATIC: 'maintenance_index_files'
+EDXAPP_NGINX_LANDING_PAGE_CSS: 'css'
+EDXAPP_NGINX_LANDING_PAGE_IMAGES: 'images'
 
 LETSENCRYPT_ADDITIONAL_DOMAIN: []
 LETSENCRYPT_DOMAIN_STING: []
