--- a/playbooks/roles/nginx/defaults/main.yml
+++ b/playbooks/roles/nginx/defaults/main.yml
@@ -84,6 +84,9 @@ EDXAPP_NGINX_BACKUP_MAINTENANCE_FILE: 'maintenance'
 EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX: 'maintenance.html'
 EDXAPP_NGINX_BACKUP_MAINTENANCE_INDEX_STATIC: 'maintenance_index_files'
 
+EDXAPP_NGINX_LANDING_PAGE_CSS: 'css'
+EDXAPP_NGINX_LANDING_PAGE_IMAGES: 'images'
+
 PROGRAMS_NGINX_REDIRECT: False
 PROGRAMS_NGINX_REDIRECT_PORT: 18140
 PROGRAMS_NGINX_REDIRECT_SSL_PORT: 443
