add credentials CREDENTIALS_LMS_BASE_URL setting

--- a/playbooks/roles/credentials/defaults/main.yml
+++ b/playbooks/roles/credentials/defaults/main.yml
@@ -151,10 +151,14 @@ CREDENTIALS_HOSTNAME: '~^((stage|prod)-)?credentials.*'
 
 NGINX_CREDENTIALS_GUNICORN_HOSTS:
   - 127.0.0.1
+CREDENTIALS_LMS_BASE_FULL_URL: 'PLEASE-SET-CREDENTIALS_LMS_BASE_FULL_URL'
 
 CREDENTIALS_EXTRA_APPS: []
 
 CREDENTIALS_SERVICE_CONFIG:
+  ###RACCOONGANG###
+  CREDENTIALS_LMS_BASE_URL: '{{ CREDENTIALS_LMS_BASE_FULL_URL }}'
+  #################
   SECRET_KEY: '{{ CREDENTIALS_SECRET_KEY }}'
   TIME_ZONE: '{{ CREDENTIALS_TIME_ZONE }}'
   LANGUAGE_CODE: '{{ CREDENTIALS_LANGUAGE_CODE }}'
@@ -248,3 +252,4 @@ credentials_debian_pkgs:
   - libpng12-dev
 
 credentials_redhat_pkgs: []
+
