--- a/playbooks/roles/hive/defaults/main.yml
+++ b/playbooks/roles/hive/defaults/main.yml
@@ -11,7 +11,7 @@
 # Defaults for role hive
 # 
 
-HIVE_VERSION: 0.11.0
+HIVE_VERSION: 0.14.0
 HIVE_MYSQL_CONNECTOR_VERSION: 5.1.29
 HIVE_HOME: "{{ HADOOP_COMMON_USER_HOME }}/hive"
 HIVE_CONF: "{{ HIVE_HOME }}/conf"
@@ -37,9 +37,9 @@ HIVE_METASTORE_DATABASE:
 hive_role_name: hive
 hive_temporary_dir: /var/tmp
 hive_dist:
-  filename: "hive-{{ HIVE_VERSION }}-bin.tar.gz"
-  url: "https://archive.apache.org/dist/hive/hive-{{ HIVE_VERSION }}/hive-{{ HIVE_VERSION }}-bin.tar.gz"
-  sha256sum: c22ee328438e80a8ee4b66979dba69650511a73f8b6edf2d87d93c74283578e5
+  filename: "apache-hive-{{ HIVE_VERSION }}-bin.tar.gz"
+  url: "https://archive.apache.org/dist/hive/hive-{{ HIVE_VERSION }}/apache-hive-{{ HIVE_VERSION }}-bin.tar.gz"
+  sha256sum: 7db1d3187f8bde20adbb59c37f536339d2548b39d9974508bd3a813e48d7b61c
 hive_mysql_connector_dist:
   filename: "mysql-connector-java-{{ SQOOP_MYSQL_CONNECTOR_VERSION }}.tar.gz"
   url: "http://dev.mysql.com/get/Downloads/Connector-J/mysql-connector-java-{{ SQOOP_MYSQL_CONNECTOR_VERSION }}.tar.gz"
