--- a/playbooks/roles/insights/tasks/main.yml
+++ b/playbooks/roles/insights/tasks/main.yml
@@ -64,10 +64,9 @@
   environment: "{{ insights_environment }}"
 
 - name: install bower dependencies
-  shell: ". {{ insights_venv_dir }}/bin/activate && . {{ insights_nodeenv_bin }}/activate && {{ insights_node_bin }}/bower install --production --config.interactive=false"
+  shell: ". {{ insights_venv_dir }}/bin/activate && . {{ insights_nodeenv_bin }}/activate && {{ insights_node_bin }}/bower install --production --config.interactive=false --force"
   args:
     chdir: "{{ insights_code_dir }}"
-
   become_user: "{{ insights_user }}"
   tags:
     - install
