--- a/playbooks/roles/nginx/defaults/main.yml
+++ b/playbooks/roles/nginx/defaults/main.yml
@@ -34,18 +34,18 @@ NGINX_LOG_FORMAT_NAME: 'p_combined'
 # headers to reflect the properties of the incoming request.
 NGINX_SET_X_FORWARDED_HEADERS: False
 
-NGINX_SERVER_ERROR_IMG: 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Pendleton_Sinking_Ship.jpg/640px-Pendleton_Sinking_Ship.jpg'
+NGINX_SERVER_ERROR_IMG: '/static/images/gerb.png'
 NGINX_SERVER_HTML_FILES:
   - file: rate-limit.html
-    title: 'Rate limit exceeded'
-    msg: 'If think you have encountered this message in error please let us know at <a href="mailto:{{ EDXAPP_TECH_SUPPORT_EMAIL|default("technical@example.com") }}">{{ EDXAPP_TECH_SUPPORT_EMAIL|default("technical@example.com") }}</a>'
+    title: ''
+    msg: 'На сайте проводятся регламентные работы'
     img: "{{ NGINX_SERVER_ERROR_IMG }}"
-    heading: 'Uh oh, we are having some server issues..'
+    heading: ''
   - file: server-error.html
-    title: 'Server error'
-    msg: 'We have been notified of the error, if it persists please let us know at <a href="mailto:{{ EDXAPP_TECH_SUPPORT_EMAIL|default("technical@example.com") }}">{{ EDXAPP_TECH_SUPPORT_EMAIL|default("technical@example.com") }}</a>'
+    title: ''
+    msg: 'На сайте проводятся регламентные работы'
     img: "{{ NGINX_SERVER_ERROR_IMG }}"
-    heading: 'Uh oh, we are having some server issues..'
+    heading: ''
 
 
 
