--- a/playbooks/roles/supervisor/tasks/main.yml
+++ b/playbooks/roles/supervisor/tasks/main.yml
@@ -228,7 +228,7 @@
 
 - name: Enable supervisor to start on boot
   service:
-    name: "{{ supervisor_service }}.service"
+    name: "{{ supervisor_service }}"
     enabled: yes
   when: ansible_distribution_release == 'xenial' and docker_container.stdout != 'yes'
   tags:
