--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -20,6 +20,8 @@ EDXAPP_COURSE_CATALOG_VISIBILITY_PERMISSION: 'see_exists'
 EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION: 'see_exists'
 EDXAPP_CMS_MKTG_URLS:
   TOS: "/tos"
+
+EDXAPP_ADDL_INSTALLED_APPS: []
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -979,6 +981,8 @@ generic_env_config:  &edxapp_generic_env
   # RACCOONGANG
   COURSE_CATALOG_VISIBILITY_PERMISSION: "{{ EDXAPP_COURSE_CATALOG_VISIBILITY_PERMISSION }}"
   COURSE_ABOUT_VISIBILITY_PERMISSION: "{{ EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION }}"
+
+  ADDL_INSTALLED_APPS: "{{ EDXAPP_ADDL_INSTALLED_APPS }}"
   # END RACCOONGANG
 
 lms_auth_config:
