--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -230,6 +230,7 @@ EDXAPP_SOCIAL_AUTH_OAUTH_SECRETS: ""
 
 EDXAPP_FEATURES:
   AUTH_USE_OPENID_PROVIDER: true
+  ALLOW_ALL_ADVANCED_COMPONENTS: true
   ENABLE_DISCUSSION_SERVICE: true
   ENABLE_INSTRUCTOR_ANALYTICS: false
   PREVIEW_LMS_BASE: "{{ EDXAPP_PREVIEW_LMS_BASE }}"
