--- a/playbooks/vagrant-devstack.yml
+++ b/playbooks/vagrant-devstack.yml
@@ -36,6 +36,7 @@
     - role: ecomworker
       ECOMMERCE_WORKER_BROKER_HOST: 127.0.0.1
     - programs
+    - credentials
     - role: notifier
       NOTIFIER_DIGEST_TASK_INTERVAL: "5"
     - browsers
