--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -22,6 +22,12 @@ EDXAPP_CMS_MKTG_URLS:
   TOS: "/tos"
 
 EDXAPP_ADDL_INSTALLED_APPS: []
+
+EDXAPP_LOCALESET_FROM_REQUEST:
+  'en': 'en_US.utf8'
+  'ru': 'ru_RU.UTF-8'
+  'uk': 'uk_UA.UTF-8'
+
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -1043,6 +1049,7 @@ lms_env_config:
   PROFILE_IMAGE_MAX_BYTES: "{{ EDXAPP_PROFILE_IMAGE_MAX_BYTES }}"
   EDXNOTES_PUBLIC_API: "{{ EDXAPP_EDXNOTES_PUBLIC_API }}"
   EDXNOTES_INTERNAL_API: "{{ EDXAPP_EDXNOTES_INTERNAL_API }}"
+  LOCALESET_FROM_REQUEST: "{{ EDXAPP_LOCALESET_FROM_REQUEST }}"
   LTI_USER_EMAIL_DOMAIN: "{{ EDXAPP_LTI_USER_EMAIL_DOMAIN }}"
   LTI_AGGREGATE_SCORE_PASSBACK_DELAY: "{{ EDXAPP_LTI_AGGREGATE_SCORE_PASSBACK_DELAY }}"
   PROCTORING_SETTINGS: "{{ EDXAPP_PROCTORING_SETTINGS }}"
