--- a/playbooks/edx-east/edxapp.yml
+++ b/playbooks/edx-east/edxapp.yml
@@ -21,6 +21,7 @@
      nginx_redirects: "{{ NGINX_EDXAPP_CUSTOM_REDIRECTS }}"
    - configure-backups 
    - ec2-snapshot
+   - { role: 'add-letsencrypt-certificate', when: USE_LETSENCRYPT == 'yes' and CMS_NGINX_SSL_CERTIFICATE is undefined and CMS_NGINX_SSL_KEY is undefined, nginx_default_sites: lms }
    - edxapp
    - role: datadog
      when: COMMON_ENABLE_DATADOG
