--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -22,6 +22,13 @@ EDXAPP_CMS_MKTG_URLS:
   TOS: "/tos"
 
 EDXAPP_ADDL_INSTALLED_APPS: []
+
+EDXAPP_LOCALESET_FROM_REQUEST:
+  'en': 'en_US.utf8'
+  'ru': 'ru_RU.UTF-8'
+  'uk': 'uk_UA.UTF-8'
+
+REMOVE_STATICFILES_DIR_DURING_UPDATE: no
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
