--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -28,6 +28,7 @@ EDXAPP_LOCALESET_FROM_REQUEST:
   'ru': 'ru_RU.UTF-8'
   'uk': 'uk_UA.UTF-8'
 
+REMOVE_STATICFILES_DIR_DURING_UPDATE: no
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
