Disable remote staticfiles for using static_collector.

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -43,6 +43,7 @@ EDXAPP_AWS_BACKUP_VERSION: ''
 EDXAPP_GRADE_STORAGE_TYPE_LOCAL: false
 
 EDXAPP_ELASTIC_SEARCH_HOST: 'localhost'
+REMOVE_STATICFILES_DIR_DURING_UPDATE: no
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
