Add EDXAPP_GRADE_STORAGE_TYPE_LOCAL default value.

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -29,6 +29,7 @@ EDXAPP_LOCALESET_FROM_REQUEST:
   'uk': 'uk_UA.UTF-8'
 
 REMOVE_STATICFILES_DIR_DURING_UPDATE: no
+EDXAPP_GRADE_STORAGE_TYPE_LOCAL: false
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
