--- a/playbooks/roles/add-letsencrypt-certificate/vars/main.yml
+++ b/playbooks/roles/add-letsencrypt-certificate/vars/main.yml
@@ -39,3 +39,5 @@ CREDENTIALS_NGINX_REDIRECT_SSL_PORT: 443
 CREDENTIALS_SSL_NGINX_PORT: 48150
 EDXAPP_CREDENTIALS_BASE_LOCAL: 127.0.0.1
 
+letsencrypt_webroot: /var/www/letsencrypt
+
