--- a/playbooks/edx-east/edxapp.yml
+++ b/playbooks/edx-east/edxapp.yml
@@ -18,6 +18,7 @@
       nginx_extra_configs: "{{ NGINX_EDXAPP_EXTRA_CONFIGS }}"
       nginx_redirects: "{{ NGINX_EDXAPP_CUSTOM_REDIRECTS }}"
     - { role: 'add-letsencrypt-certificate', when: USE_LETSENCRYPT == 'yes' and CMS_NGINX_SSL_CERTIFICATE is undefined and CMS_NGINX_SSL_KEY is undefined, nginx_default_sites: lms }
+      when: LETSENCRYPT_DEPENDENSYS_UP4CURRENT_INSTALL
     - edxapp
     - role: datadog
       when: COMMON_ENABLE_DATADOG
