--- a/playbooks/roles/hadoop-letsencrypt/defaults/main.yml
+++ b/playbooks/roles/hadoop-letsencrypt/defaults/main.yml
@@ -23,5 +23,4 @@ dhparamfile_dir: '/etc/nginx/ssl'
 HADOOP_WEB_CONSOLE_NGINX_PORT: 8088
 HADOOP_WEB_CONSOLE_NGINX_SSL_PORT: 18088
 
-nginx_skip_domains: []
-
+HADOOP_WEB_CONSOLE_BASE: 127.0.0.1
