--- a/playbooks/roles/edxapp/tasks/service_variant_config.yml
+++ b/playbooks/roles/edxapp/tasks/service_variant_config.yml
@@ -157,8 +157,18 @@
 # Gather assets using paver if possible
 - name: "gather {{ item }} static assets with paver"
   command: "{{ COMMON_BIN_DIR }}/edxapp-update-assets-{{ item }}"
-  when: celery_worker is not defined and not devstack and item != "lms-preview"
+  when: celery_worker is not defined and not devstack and item != "lms-preview" and not UPDATE_ASSETS_ASYNC
   with_items: "{{ service_variants_enabled }}"
   tags:
     - gather_static_assets
     - assets
+
+# Gather assets for service_variants_enabled exclude lms and cms using paver if possible
+- name: "gather {{ item }} static assets with paver"
+  command: "{{ COMMON_BIN_DIR }}/edxapp-update-assets-{{ item }}"
+  when: celery_worker is not defined and not devstack and item != "lms-preview" and UPDATE_ASSETS_ASYNC and item != "lms" and item != "cms"
+  with_items: "{{ service_variants_enabled }}"
+  tags:
+    - gather_static_assets
+    - assets
+
