--- a/playbooks/roles/ec2-snapshot/tasks/main.yml
+++ b/playbooks/roles/ec2-snapshot/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 - include: cron.yml
-  when: ec2_snapshot_cron
+  when: ec2_snapshot_cron and ec2_snapshot_enabled
 
 - include: logrotate.yml
-  when: ec2_snapshot_logrotate
+  when: ec2_snapshot_logrotate and ec2_snapshot_enabled
 
 - include: ec2_snapshot_rotate.yml
   with_items: "{{ ec2_snapshot_profiles }}"
