--- a/playbooks/edx-east/edxapp.yml
+++ b/playbooks/edx-east/edxapp.yml
@@ -6,6 +6,8 @@
     serial_count: 1
     CLUSTER_NAME: 'edxapp'
     USE_LETSENCRYPT: 'no'
+    CREATE_GRADES_AZURE_CONTAINER: "{{ azure_grades_blobstorage_create|default (no) }}"
+    GRADE_STORAGE_TYPE: "{{ EDXAPP_GRADE_STORAGE_TYPE | default('local') }}"
   serial: "{{ serial_count }}"
   roles:
    - aws
@@ -20,6 +22,9 @@
      nginx_extra_sites: "{{ NGINX_EDXAPP_EXTRA_SITES }}"
      nginx_extra_configs: "{{ NGINX_EDXAPP_EXTRA_CONFIGS }}"
      nginx_redirects: "{{ NGINX_EDXAPP_CUSTOM_REDIRECTS }}"
+   - { role: azure-blob-create,
+       when: (GRADE_STORAGE_TYPE == 'azure' and CREATE_GRADES_AZURE_CONTAINER)
+     }
    - configure-backups 
    - ec2-snapshot
    - { role: 'add-letsencrypt-certificate', when: USE_LETSENCRYPT == 'yes' and CMS_NGINX_SSL_CERTIFICATE is undefined and CMS_NGINX_SSL_KEY is undefined, nginx_default_sites: lms }
