--- a/playbooks/edx-east/edxapp.yml
+++ b/playbooks/edx-east/edxapp.yml
@@ -6,7 +6,7 @@
     serial_count: 1
     CLUSTER_NAME: 'edxapp'
     USE_LETSENCRYPT: 'no'
-    CREATE_GRADES_AZURE_CONTAINER: "{{ azure_grades_blobstorage_create|default (no) }}"
+    CREATE_GRADES_AZURE_CONTAINER: "{{ azure_grades_blobstorage_create|default (false) }}"
     GRADE_STORAGE_TYPE: "{{ EDXAPP_GRADE_STORAGE_TYPE | default('local') }}"
   serial: "{{ serial_count }}"
   roles:
