Add Microsoft Azure AD SSO settings.

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -29,6 +29,16 @@ EDXAPP_LOCALESET_FROM_REQUEST:
   'uk': 'uk_UA.UTF-8'
 
 REMOVE_STATICFILES_DIR_DURING_UPDATE: no
+
+#Microsoft Azure AD SSO
+EDXAPP_THIRD_PARTY_AUTH_BACKENDS:
+- "sso_edx_microsoft.backends.microsoft.MicrosoftBackend"
+- "sso_edx_microsoft.backends.microsoft.CMSMicrosoftBackend"
+
+EDXAPP_CMS_MICROSOFT_MAKO_TEMPLATES: []
+EDXAPP_AZURE_AD_ID: ""
+#Microsoft Azure AD SSO
+
 ## END RACCOONGANG ##
 
 # Bucket used for xblock file storage
@@ -828,6 +838,11 @@ edxapp_generic_auth_config:  &edxapp_generic_auth
   FACEBOOK_APP_ID: "{{ EDXAPP_FACEBOOK_APP_ID }}"
   FACEBOOK_APP_SECRET: "{{ EDXAPP_FACEBOOK_APP_SECRET }}"
   FACEBOOK_API_VERSION: "{{ EDXAPP_FACEBOOK_API_VERSION }}"
+  ## RACCOONGANG ##
+  #Microsoft Azure AD SSO
+  AZURE_AD_ID: "{{ EDXAPP_AZURE_AD_ID }}"
+  #Microsoft Azure AD SSO
+  ## END RACCOONGANG ##
 
 generic_cache_config: &default_generic_cache
   BACKEND:  'django.core.cache.backends.memcached.MemcachedCache'
@@ -1004,6 +1019,10 @@ generic_env_config:  &edxapp_generic_env
   COURSE_ABOUT_VISIBILITY_PERMISSION: "{{ EDXAPP_COURSE_ABOUT_VISIBILITY_PERMISSION }}"
 
   ADDL_INSTALLED_APPS: "{{ EDXAPP_ADDL_INSTALLED_APPS }}"
+
+  #Microsoft Azure AD SSO
+  THIRD_PARTY_AUTH_BACKENDS: "{{ EDXAPP_THIRD_PARTY_AUTH_BACKENDS }}"
+  #Microsoft Azure AD SSO
   # END RACCOONGANG
 
 lms_auth_config:
@@ -1114,6 +1133,7 @@ cms_env_config:
   COURSE_IMPORT_EXPORT_BUCKET: "{{ EDXAPP_IMPORT_EXPORT_BUCKET }}"
   ##   RACCOONGANG   ##
   CMS_MKTG_URLS: "{{ EDXAPP_CMS_MKTG_URLS }}"
+  MICROSOFT_MAKO_TEMPLATES: "{{ EDXAPP_CMS_MICROSOFT_MAKO_TEMPLATES }}"
   ## END RACCOONGANG ##
 
 # install dir for the edx-platform repo
